RESOLVED FIXED68740
Strict mode does not work in non-trivial nested functions.
https://bugs.webkit.org/show_bug.cgi?id=68740
Summary Strict mode does not work in non-trivial nested functions.
Gavin Barraclough
Reported 2011-09-23 15:26:55 PDT
Function-info caching does not preserve all state that it should.
Attachments
Fix (7.45 KB, patch)
2011-09-23 15:40 PDT, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2011-09-23 15:40:26 PDT
Oliver Hunt
Comment 2 2011-09-23 15:41:48 PDT
Comment on attachment 108548 [details] Fix r=me
Gavin Barraclough
Comment 3 2011-09-23 15:58:30 PDT
Fixed in r95877
Note You need to log in before you can comment on or make changes to this bug.